<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview_first"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imgCard1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/cardColorBackground"
            android:contentDescription="@string/imageDescriptionColoradoAvalanche"
            app:srcCompat="@mipmap/ic_launcher_coloradoavalanche"
            tools:srcCompat="@mipmap/ic_launcher_coloradoavalanche" />

        <LinearLayout
            android:layout_width="263dp"
            android:layout_height="107dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_cardView4Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardColorBackground"
                android:text="@string/card3_title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_cardView4Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardColorBackground"
                android:text="@string/card3_description" />

            <TextView
                android:id="@+id/textView_card3Total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/cardColorBackground"
                android:text="@string/cardTotal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardColorBackground"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_card3Add"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:background="@android:drawable/ic_input_add"
                android:stateListAnimator="@android:anim/fade_in"
                android:onClick="addItem"/>

            <TextView
                android:id="@+id/textView_card3Amount"
                android:layout_width="36dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
                android:textAlignment="center" />

            <Button
                android:id="@+id/button_card3Remove"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:background="@drawable/ic_minus" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>